--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,10 @@ body {
     padding: 20px 0px;
     align-items: center;
     background-color:rgb(253, 198, 0);
-    color:#ffffff;
+    color:#000000;
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
-
     border-radius: 50px;
     margin: 15px 0;
     transition: all 0.5s;
@@ -70,7 +69,7 @@ body {
 }
 
 .links a:hover {
-    background-color: #000000;
+    background-color: #ffffff;
     border: 1px solid rgb(253, 198, 0);
 }
 
